[FIX] add z-index in header

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ header{
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 1;
 }
 /* BLOCK HEADER  */
 header .row{
